# al2o3_vfile

./: .editorconfig  CMakeLists.txt  LICENSE  README.md
include/al2o3_vfile/: interface.h  memory.h  osfile.h  utils.h  vfile.h  vfile.hpp
src/: memory.c  osfile.c  utils.c  vfile.c
tests/: runner.cpp  test_vfile.cpp
